[tool.poetry]
name = "herald"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MPLv2"
packages = [
    { include = "herald", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.4.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
zstd = "^1.5.2"
pdf2image = "^1.16.0"
prometheus-client = "^0.15.0"
fs = "^2.4.16"
filelock = "^3.9.0"
quart = "^0.18.4"
gidgethub = "^5.3.0"
aiohttp = "^3.8.5"
quart-rate-limiter = "^0.8.0"
async-lru = "^2.0.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
types-Flask = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
