[project]
name = "herald"
version = "0.1.0"
description = ""
authors = [{ name = "Paul Gessinger", email = "hello@paulgessinger.com" }]
license = { text = "MPLv2" }
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.4.0",
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "pdf2image>=1.16.0",
    "prometheus-client>=0.15.0",
    "fs>=2.4.16",
    "filelock>=3.9.0",
    "quart>=0.18.4",
    "gidgethub>=5.3.0",
    "aiohttp>=3.8.5",
    "quart-rate-limiter>=0.8.0",
    "async-lru>=2.0.4",
    "lru-dict>=1.2.0",
    "pydantic>=2.3.0",
    "zstandard>=0.22.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = ["black>=22.8.0", "types-Flask>=1.1.6", "hypercorn>=0.15.0"]

[dependency-groups]
dev = ["black>=22.8.0", "types-Flask>=1.1.6", "hypercorn>=0.15.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herald"]
